<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        tools:context=".ui.settings.SettingsFragment">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settings_LBL_aboutYou"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_you"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:gravity="left"
            android:layout_marginTop="8dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_EDT_firstName"
                android:hint="@string/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ " />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_EDT_lastName"
                android:hint="@string/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ " />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_EDT_phoneNumber"
                android:hint="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left"
            android:layout_marginTop="5dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/settings_LBL_languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/languages"
                android:textStyle="italic"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/settings_LBL_selectLanguages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_languages"
                android:padding="12dp"
                android:drawablePadding="16dp"
                android:layout_marginLeft="15dp"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:background="@android:drawable/editbox_background" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left"
            android:layout_marginTop="5dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/settings_LBL_services"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/services"
                android:textStyle="italic"
                android:textSize="18sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/settings_LBL_selectServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_services"
                android:padding="12dp"
                android:drawablePadding="16dp"
                android:layout_marginLeft="15dp"
                android:drawableEnd="@android:drawable/arrow_down_float"
                android:background="@android:drawable/editbox_background" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/settings_PB_progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settings_LBL_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:gravity="left"
            android:layout_marginTop="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_EDT_city"
                android:hint="@string/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ " />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_EDT_street"
                android:hint="@string/street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ " />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_EDT_houseNumber"
                android:hint="@string/house_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_EDT_apartmentNumber"
                android:hint="@string/apartment_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="0123456789" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_BTN_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logout"
                android:textStyle="bold"
                android:layout_marginHorizontal="32dp" />

            <View
                android:layout_width="16dp"
                android:layout_height="0dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings_BTN_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:textStyle="bold"
                android:layout_marginHorizontal="32dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>
</ScrollView>